--- a/little_lemon/index.html
+++ b/little_lemon/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="author" content="Conor Bowles">
+    <meta name="language" content="english">
+    <meta charset="UTF-8">
+    <meta name="description" content="The little lemon restaurant"/>
+
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" content="The little lemon restaurant"/>
+    <meta name="og:image" content="../assets/icons/logo.svg"/>
+
+    <title>Little Lemon</title>
   </head>
   <body>
     <div id="root"></div>
